# acars-oxide

./: .dictionary.txt  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.build_binary  Dockerfile.local  LICENSE  README.md  flake.nix  install_mac_dev_deps.sh  run_on_mac.sh
.github/: dependabot.yaml
.github/workflows/: deploy.yml  markdownlint.yml  on_pr.yaml  yamllint.yml
Dev Documents/: JSONSpec.MD
Dev-Documents/: JSONSpec.MD
oxide-bin/: Cargo.toml
oxide-bin/src/: main.rs
oxide-config/: Cargo.toml
oxide-config/src/: lib.rs
oxide-rtlsdr/src/: lib.rs
rootfs/: rename_current_arch_binary.sh
rootfs/etc/s6-overlay/s6-rc.d/acars_oxide/: run
rootfs/etc/s6-overlay/scripts/: acars_oxide
rootfs/etc/services.d/acars_oxide/: run
rtlsdr/: Cargo.toml
rtlsdr/src/: lib.rs
rust/oxide-bin/: Cargo.toml
rust/oxide-bin/src/: main.rs
rust/oxide-config/: Cargo.toml
rust/oxide-config/src/: lib.rs
rust/oxide-decoders/: Cargo.toml
rust/oxide-decoders/src/: lib.rs
rust/oxide-decoders/src/decoders/: acars.rs  acars_labels.rs
rust/oxide-helpers/: Cargo.toml
rust/oxide-helpers/src/: lib.rs
rust/oxide-logging/: Cargo.toml
rust/oxide-logging/src/: lib.rs
rust/oxide-output/: Cargo.toml
rust/oxide-output/src/: lib.rs
rust/oxide-rtlsdr/: Cargo.toml
rust/oxide-rtlsdr/src/: lib.rs
rust/oxide-scanner/: Cargo.toml
rust/oxide-scanner/src/: lib.rs
sample-grabber/: Cargo.toml
sample-grabber/src/: main.rs
scripts/: mac_build.sh  mac_run.sh  mac_run_flamegraph.sh  mac_run_release.sh  unix_build.sh  unix_run.sh  unix_run_flamegraph.sh  unix_run_release.sh
