[workspace]
members = ["oxide-bin", "oxide-config", "oxide-rtlsdr"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Fred Clausen"]
description = "ACARS Oxide. A utility to receive, via librtlsdr and RTL-SDR dongle(s), ACARS and VDLM2 messages."
documentation = "https://github.com/sdr-enthusiasts/acars-oxide"
homepage = "https://github.com/sdr-enthusiasts/acars-oxide"
repository = "https://github.com/sdr-enthusiasts/acars-oxide"
readme = "README.md"
license = "MIT"
rust-version = "1.69.0"
