[workspace]
members = [
    "rust/oxide-bin",
    "rust/oxide-config",
    "rust/oxide-decoders",
    "rust/oxide-logging",
    "rust/oxide-output",
    "rust/oxide-rtlsdr",
    "rust/oxide-scanner",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Fred Clausen"]
description = "ACARS Oxide. A utility to receive, via librtlsdr and RTL-SDR dongle(s), ACARS and VDLM2 messages."
documentation = "https://github.com/sdr-enthusiasts/acars-oxide"
homepage = "https://github.com/sdr-enthusiasts/acars-oxide"
repository = "https://github.com/sdr-enthusiasts/acars-oxide"
readme = "README.md"
license = "MIT"
rust-version = "1.69.0"

# [profile.release]
# debug = true
# lto = "fat"
# codegen-units = 1
# opt-level = 2
