[workspace]
members = [
    "rust/oxide-bin",
    "rust/oxide-config",
    "rust/oxide-decoders",
    "rust/oxide-helpers",
    "rust/oxide-output",
    "rust/oxide-rtlsdr",
    "rust/oxide-scanner",
]

exclude = ["sample-grabber"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.3"
authors = ["Fred Clausen"]
description = "ACARS Oxide. A utility to receive, via librtlsdr and RTL-SDR dongle(s), ACARS and VDLM2 messages."
documentation = "https://github.com/sdr-enthusiasts/acars-oxide"
homepage = "https://github.com/sdr-enthusiasts/acars-oxide"
repository = "https://github.com/sdr-enthusiasts/acars-oxide"
readme = "README.md"
license = "MIT"
rust-version = "1.69.0"

[workspace.dependencies]
sdre-rust-logging = "0.3.22"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
array-init = "2.1.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
custom_error = "1.9.2"
log = "0.4.28"
num = "0.4.3"
libc = "0.2.177"
rtlsdr_mt = "2.2.0"
rtlsdr_sys = "1.1.2"
ctrlc = "3.5.1"

# [profile.release]
# debug = true
# lto = "fat"
# codegen-units = 1
# opt-level = 2
