[package]
name = "acars-oxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.17"
rtlsdr = { path = "../rtlsdr" }
oxide-config = { path = "../oxide-config" }
oxide-logging = { path = "../oxide-logging" }
tokio = { version = "1.28.1", features = ["full", "tracing"] }
