[package]
name = "oxide-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.2.5", features = ["derive", "env"] }
custom_error = "1.9.2"
