[package]
name = "acars-oxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.21"
oxide-rtlsdr = { path = "../oxide-rtlsdr" }
oxide-config = { path = "../oxide-config" }
oxide-scanner = { path = "../oxide-scanner" }
oxide-decoders = { path = "../oxide-decoders" }
sdre-rust-logging = "0.3.2"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
array-init = "2.1.0"
