[package]
name = "oxide-decoders"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.26"
custom_error = "1.9.2"
num = "0.4.3"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
oxide-helpers = { path = "../oxide-helpers" }
# num-complex = "0.4.3"
