[package]
name = "oxide-decoders"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
custom_error.workspace = true
num.workspace = true
tokio.workspace = true
oxide-helpers = { path = "../oxide-helpers" }
# num-complex = "0.4.3"
