[package]
name = "oxide-output"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.36.0", features = ["full", "tracing"] }
log = "0.4.20"
oxide-decoders = { path = "../oxide-decoders" }
