[package]
name = "oxide-rtlsdr"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = "0.4.21"
num = "0.4.1"
custom_error = "1.9.2"
oxide-decoders = { path = "../oxide-decoders" }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
array-init = "2.1.0"
rtlsdr-rs = { git = "https://github.com/fredclausen/rtl-sdr-rs" }
#rtlsdr-rs = { path = "../../../../airrames/rtl-sdr-rs" }
# num-complex = "0.4.3"
