[package]
name = "oxide-rtlsdr"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
libc.workspace = true
rtlsdr_mt.workspace = true
rtlsdr_sys.workspace = true
ctrlc.workspace = true
num.workspace = true
custom_error.workspace = true
tokio.workspace = true
array-init.workspace = true
oxide-decoders = { path = "../oxide-decoders" }
# num-complex = "0.4.3"
