[package]
name = "oxide-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
oxide-rtlsdr = { path = "../oxide-rtlsdr" }
log = "0.4.17"
tokio = { version = "1.28.1", features = ["full", "tracing"] }
