[package]
name = "oxide-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
oxide-rtlsdr = { path = "../oxide-rtlsdr" }
oxide-decoders = { path = "../oxide-decoders" }
oxide-output = { path = "../oxide-output" }
log = "0.4.24"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
